2016-02-29  Charlie Zender  <zender@uci.edu>

	* Modify ncpdq -a option to handle MPAS ice dimensions

	* NCO 4.5.6-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.6-alpha03 final changes';git push
	git tag -a 4.5.6-alpha03 -m 'Version 4.5.6-alpha03 new features: ncremap add cmd_msh to history';git push --tags

	* Brown paper bag release--switching from nco_put_vara() to nco_put_var() broke ... a lot

	* Add cmd_msh to history attribute of maps generated by Tempest

2016-02-28  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.6-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.6-alpha02 final changes';git push
	git tag -a 4.5.6-alpha02 -m 'Version 4.5.6-alpha02 new features: FV slat/slon, unique names, clean-up, ncatted -t, NC_NOFILL,nc_put_var(),ncremap -U';git push --tags

	* Add specifiable directory for intermediate files: ncremap -U drc_tmp

	* Add list of MPAS grid and extensive variables to exclude

	* Add wrappers for nc_put_var(), nc_get_var() families

	* Add ncatted -t --typ_mch --type_match switch for editing all variables whose type matches attribute type and no others

	* Turn-off fill mode in regridding

	* Add history to ncatted when called by ncremap

2016-02-27  Charlie Zender  <zender@uci.edu>

	* ncremap does not annotate with ncatted when called from climo_nco.sh

	* Use unique intermediate filenames by default in ncremap, to prevent interference during parallel invocations

	* Add slat/slon coordinates to FV output grids for interoperability with AMWG diagnostics

2016-02-26  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.6-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.6-alpha01 final changes';git push
	git tag -a 4.5.6-alpha01 -m 'Version 4.5.6-alpha01 new features: ncremap MPAS --rnr=0.0';git push --tags

	* ncremap: use ncatted to add _FillValue for MPAS

	* ncremap: make --rnr=0.0 default for MPAS

2016-02-17  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.5 release procedure: